--- a/especialistas-web/src/main/webapp/src/modules/consultorios/create/consultorios.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/create/consultorios.create.html
@@ -6,9 +6,11 @@
         <label>Hospital:{{currentHospital.nombre}}</label>
         
     </div>
-    <input ng-show="consultorio.$valid" type="submit" value="Save" class="btn btn-success"/>
-    <button type="reset" class="btn btn-info">Reiniciar</button>
-    <a class="btn btn-danger" ui-sref="consultoriosList"> Cancelar </a>
-    
+    <br>
+    <div class="uk-button-group">
+        <button type="reset" class="uk-button uk-button-secondary">Reiniciar</button>
+        <button ui-sref="consultoriosList" class="uk-button uk-button-default">Cancelar</button>
+        <button ng-show="consultorio.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+    </div>    
 </form>
 
