--- a/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.detail.html
@@ -18,13 +18,8 @@
                         <td id="{{$index}}-nombreMed"><a ui-sref="medicamentoDetail({id: medicamento.id})">{{medicamento.nombre}}</a></td>
                     </tr>
                     <tr ng-show="tipoUser!==1 && tipoUser!==2"><td>
-                            <button type="button" class="btn btn-success" ui-sref="addMedicamento({id: currentRecord.id})">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
-                            </button>
-           
-                            <button type="button" class="btn btn-danger" ui-sref="deleteMedicamento({id: currentRecord.id})">
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
-                            </button>
+                            <a uk-icon="icon: plus" ui-sref="addMedicamento({id: currentRecord.id})"></a>
+                            <a uk-icon="trash" ui-sref="deleteMedicamento({id: currentRecord.id})"></a>
                         </td></tr>
                 </tbody>
             </table>
