--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -50,9 +50,8 @@
                 </tr>
                 <tr>
                     <td>
-                        <button type="button" class="btn btn-success" ng-show="tipoUser!==1 && tipoUser!==2" ui-sref="examAdd({laboratorioId: laboratorioActual.id})">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
-                        </button>
+                        <br>
+                        <a uk-icon="icon: plus" ng-show="tipoUser!==1 && tipoUser!==2" ui-sref="examAdd({laboratorioId: laboratorioActual.id})"></a>
                     </td>
                 </tr>
             </tbody>
