--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -14,7 +14,7 @@
                 <dt>{{currentUsuario.nombre}}</dt>
                 
                 <hr>
-                <dt>cedula</dt>
+                <dt>cédula</dt>
                 <dd>{{currentUsuario.cedula}}</dd>
           
                 <hr>
