--- a/especialistas-web/src/main/webapp/src/modules/citas/update/citas.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/update/citas.update.html
@@ -2,13 +2,13 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="updateCita">Actualizar cita</label>
-                <label ng-if="edit" id="editCita">Editar Información</label></div>
+            <div class="panel-heading"><label ng-if="!edit" id="updateCita"><strong>Actualizar cita</strong></label>
+                <label ng-if="edit" id="editCita"><strong>Editar Información</strong></label></div>
             <div class="panel-body">
                 <form ng-submit="updateCita()" name="cita">
-                        <div class="form-group">
+                    <div class="form-group">
                         <label for="horaNueva">Hora</label>
-                        <select class="form-control" id="horaNueva" required ng-model="horaNueva">
+                        <select class="form-control uk-input" id="horaNueva" required ng-model="horaNueva">
                             <option ng-repeat="hora in horas" value={{hora}}>{{hora.horaInicio}}-{{hora.horaFin}} </option>
                         </select>
                     </div>
@@ -16,13 +16,10 @@
                         <div class="alert alert-warning" >
                             <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
                         </div> 
-                    </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input ng-show="cita.$valid" type="submit" value="Guardar" class="btn btn-success"/>
-                            <a ng-if="!edit" class="btn btn-info" ui-sref="citasList">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="citasList">Cancelar</a>
-                        </div>
+                    </div>
+                    <div class="uk-button-group">
+                        <button ng-if="!edit" class="uk-button uk-button-default" ui-sref="citasList">Cancelar</button>
+                        <button ng-show="cita.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
                     </div>
                 </form>
             </div>
