--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
@@ -19,7 +19,10 @@
         <label for="farmaciaName">Longitud</label>
         <input type="number" min="-76.6" max="-67.18" step="0.1" class="form-control uk-input" id="longitudUbicacion" required ng-model="longitudUbicacion" placeholder="e.g. 2.6">
     </div>
-    <input ng-show="farmacia.$valid" type="submit" value="Save" class="btn btn-success"/>
-    <br><button type="reset" class="uk-button">Reiniciar</button>
-    <a class="btn btn-danger" ui-sref="farmaciasList"> Cancelar </a>
+    <br>
+    <div class="uk-button-group">
+        <button type="reset" class="uk-button uk-button-secondary">Reiniciar</button>
+        <button class="uk-button uk-button-default" ui-sref="farmaciasList">Cancelar</button>
+        <button ng-show="farmacia.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+    </div>
 </form>
