--- a/especialistas-web/src/main/webapp/src/modules/horas/delete/horas.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/delete/horas.delete.html
@@ -1,6 +1,8 @@
 <div class="center-block well text-center uk-width-1-1">
-    <h1>¿Está seguro que quiere eliminar esta hora?</h1>
-    <button id="confirm-delete" ng-click="deleteHora()" class="uk-button uk-button-primary">Eliminar</button>
-    <a id="cancel-delete" ui-sref="horaDetail({horaId})" class="uk-button uk-button-default">Cancelar</a>
+    <h1>¿Desea eliminar esta hora?</h1>
+    <div class="uk-button-group">
+        <button id="confirm-delete" ng-click="deleteHora()" class="uk-button uk-button-secondary">Eliminar</button>
+        <button id="cancel" ui-sref="horaDetail({horaId})" class="uk-button uk-button-default">Cancelar</button>
+    </div>
 </div>
 
