--- a/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
@@ -16,9 +16,12 @@
         <label for="hospitalUbicacionLongitud">Longitud</label>
         <input type="number" min="-76.6" max="-67.18" step="0.1" class="form-control uk-input" id="hospitalUbicacionLongitud" required ng-model="hospitalUbicacionLongitud" placeholder="e.g. 1.100">
     </div>
-    <input ng-show="hospital.$valid" type="submit" value="Save" class="btn btn-success"/>
-    <br><button type="reset" class="uk-button-primary uk-button">Reiniciar</button>
-    <a class="uk-button uk-button" ui-sref="hospitalesList"> Cancelar </a>
+    <br><div class="uk-button-group">
+        <button type="reset" class="uk-button-secondary uk-button">Reiniciar</button>
+        <button class="uk-button uk-button-default" ui-sref="hospitalesList">Cancelar</button>
+        <button ng-show="hospital.$valid" type="submit" class="uk-button-secondary uk-button">Guardar</button>
+    </div>
+       
     
 </form>
 
