--- a/especialistas-web/src/main/webapp/src/modules/hospitales/delete/hospitales.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/delete/hospitales.delete.html
@@ -1,5 +1,7 @@
 <div class="center-block well text-center uk-width-1-1">
-    <h3>Confirmar eliminación</h3>
-    <button id="confirm-delete" ng-click="deleteHospital()" class="uk-button uk-button-primary">Eliminar</button>
-    <a id="cancel-delete" ui-sref="hospitalesList" class="uk-button">Cancelar</a>
+    <h3>¿Desea eliminar este hospital?</h3>
+    <div class="uk-button-group">
+        <button id="confirm-delete" ng-click="deleteHospital()" class="uk-button uk-button-secondary">Eliminar</button>
+        <button id="cancel" ui-sref="hospitalesList" class="uk-button uk-button-default">Cancelar</button>
+    </div>
 </div>
