--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/delete/laboratorio.delete.html
@@ -1,6 +1,8 @@
 
 <div class="center-block well text-center uk-width-1-1">
-    <h3>Confirmar eliminacion</h3>
-    <button id="confirm-delete" ng-click="deleteLab()" class="uk-button uk-button-primary">Eliminar</button>
-    <a id="cancel-delete" ui-sref="laboratoriosList" class="uk-button uk-button-default">Cancelar</a>
+    <h3>¿Desea eliminar este laboratorio?</h3>
+    <div class="uk-button-group">
+        <button id="confirm-delete" ng-click="deleteLab()" class="uk-button uk-button-secondary">Eliminar</button>
+        <button id="cancel" ui-sref="laboratoriosList" class="uk-button uk-button-default">Cancelar</button>
+    </div>
 </div>
