--- a/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
@@ -1,7 +1,9 @@
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
 <div class="center-block well text-center uk-width-1-1">
-    <h1>¿Está seguro que quiere eliminar este médico?</h1>
-    <button id="confirm-delete" ng-click="deleteMedico()" class="uk-button uk-button-primary">Eliminar</button>
-    <a id="cancel-delete" ui-sref="horasList({medicoId})" class="uk-button uk-button-default">Cancelar</a>
+    <h1>¿Desea eliminar este médico?</h1>
+    <div class="uk-button-group">
+        <button id="confirm-delete" ng-click="deleteMedico()" class="uk-button uk-button-secondary">Eliminar</button>
+        <button id="cancel-delete" ui-sref="horasList({medicoId})" class="uk-button uk-button-default">Cancelar</button>
+    </div>
 </div>
 
