--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
@@ -8,7 +8,7 @@
                 <form ng-submit="createOrdenMedica()" name="ordenMedica">
                     <div class="form-group">
                         <label for="descripcion">Descripcion</label>
-                        <input id="descripcion" required ng-model="descripcion" class="form-control"/>
+                        <input id="descripcion" required ng-model="descripcion" class="form-control uk-input"/>
                     </div>
                         
                    <div class="form-group" ng-if="!ordenMedica.$valid">
@@ -16,12 +16,10 @@
                             <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
                         </div> 
                     </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input ng-show="ordenMedica.$valid" type="submit" value="Guardar" class="btn btn-success"/>
-                            <a ng-if="!edit" class="btn btn-info" ui-sref="citasDetail({citasId: citaParaOrdenId})">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="citasDetail({citasId: citaParaOrdenId})">Cancelar</a>
-                        </div>
+                    <br>
+                    <div class="uk-button-group">
+                        <button id="cancel" ui-sref="citasDetail({citasId: citaParaOrdenId})" class="uk-button uk-button-default">Cancelar</button>
+                        <button ng-show="ordenMedica.$valid" class="uk-button uk-button-secondary">Guardar</button>
                     </div>
                 </form>
             </div>
