--- a/especialistas-web/src/main/webapp/src/modules/usuarios/delete/usuarios.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/delete/usuarios.delete.html
@@ -1,5 +1,7 @@
 <div class="center-block well text-center uk-width-1-1">
-    <h1>Estas Segur@?</h1>
-    <button id="confirm-delete" ng-click="deleteAuthor()" class="uk-button uk-button-primary">Eliminar</button>
-    <a id="cancel-delete" ui-sref="usuariosList" class="uk-button uk-button-default">Cancelar</a>
+    <h1>¿Desea eliminar este usuario?</h1>
+    <div class="uk-button-group">
+        <button id="confirm-delete" ng-click="deleteAuthor()" class="uk-button uk-button-secondary">Eliminar</button>
+        <button id="cancel" ui-sref="usuariosList" class="uk-button uk-button-default">Cancelar</button>
+    </div>
 </div>
