--- a/especialistas-web/src/main/webapp/src/modules/consultorios/create/consultorios.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/create/consultorios.create.html
@@ -2,7 +2,7 @@
     
     <div class="form-group">
         <label for="consultorioNumber">Número</label>
-        <input class="form-control" id="consultorioNumber" required ng-model="consultorioNumber" placeholder="Ingrese el número del consultorio">
+        <input class="form-control uk-input" id="consultorioNumber" required ng-model="consultorioNumber" placeholder="Ingrese el número del consultorio">
         <label>Hospital:{{currentHospital.nombre}}</label>
         
     </div>
