--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -40,12 +40,11 @@
             </thead>
             <tbody>
                 <tr ng-repeat="examen in examenesLab">
-                    <td><a ui-sref="examDetail({examenId : examen.id})">{{examen.nombre}}</a></td>
+                    <td><a ui-sref="examDetail({examenId : examen.id})" >{{examen.nombre}}</a></td>
                     <td>{{examen.precio}}</td>
                     <td>{{examen.recomendacion}}</td>
                     <td>
-                        <button type="button" class="btn btn-danger" ui-sref="examenDelete({examenId: examenActual.id})">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true" ></span>
+                        <a ng-show="tipoUser!==1 && tipoUser!==2" uk-icon="icon: trash" ui-sref="examenDelete({examenId: examenActual.id})" style="color: #f44"></a>
                     </td>
                 </tr>
                 <tr>
