--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacias.addMedicamento.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacias.addMedicamento.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createAuthor"><strong>Crear una nueva farmacia</strong></label>
+            <div class="panel-heading"><label ng-if="!edit" id="createAuthor"><strong>Agregar un medicamento</strong></label>
                 <div class="panel-body">
                     <br><form ng-submit="addMedicamento(e)" name="farmacia">
                         <div class="form-group row">
@@ -14,7 +14,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-sm-4" ng-if="!usuario.$valid">
+                            <div class="form-group col-sm-4" ng-if="!farmacia.$valid">
 
                                 <div class="alert alert-warning" >
                                     <br><strong>Advertencia!</strong><p>Todos los campos deben estar llenos*</p>
