--- a/especialistas-web/src/main/webapp/src/modules/farmacias/delete/farmacias.deleteMedicamento.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/delete/farmacias.deleteMedicamento.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createAuthor"><strong>Crear una nueva farmacia</strong></label>
+            <div class="panel-heading"><label ng-if="!edit" id="createAuthor"><strong>Eliminar medicamento</strong></label>
                 <div class="panel-body">
                     <form ng-submit="deleteMedicamento(e)" name="farmacia">
                         <div class="form-group row">
@@ -14,15 +14,16 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-sm-4" ng-if="!usuario.$valid">
+                            <div class="form-group col-sm-4" ng-if="!farmacia.$valid">
 
                                 <div class="alert alert-warning" >
                                     <strong>Advertencia!</strong><p>todos los campos deben estar llenos*</p>
                                 </div> 
                             </div> 
                         </div> 
+                        <br>
                         <div class="uk-button-group">
-                            <button ng-show="farmacia.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+                            <button ng-show="farmacia.$valid" type="submit" class="uk-button uk-button-secondary">Eliminar</button>
                             <button class="uk-button uk-button-default" ui-sref="farmaciasList">Cancelar</button>
                         </div>
                     </form>
