--- a/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
@@ -17,16 +17,17 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="form-group col-sm-4" ng-if="!usuario.$valid">
+                            <div class="form-group col-sm-4" ng-if="!medicamento.$valid">
 
                                 <div class="alert alert-warning" >
                                     <strong>Advertencia!</strong><p>Todos los campos deben estar llenos*</p>
                                 </div> 
                             </div> 
                         </div> 
+                        <br>
                         <div class="uk-button-group">
                             <button class="uk-button uk-button-default" ui-sref="medicamentosList">Cancelar</button>
-                            <button ng-show="farmacia.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+                            <button ng-show="medicamento.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
                         </div>
                        </form>
 
