--- a/especialistas-web/src/main/webapp/src/modules/usuarios/login/index.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/login/index.html
@@ -1,41 +1,40 @@
-                <!--BARRA SUPERIOR-->
-        <div id="barra-sup">
-            <h1 class="uk-width-1-6@xl uk-width-1-5@l">Asanar</h1>
-            <div class="imgm">
-                Usuario X &nbsp;&nbsp;
-                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ng-show="tipoUser===1" ui-sref="usuarioDetail ({usuarioId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
-                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ng-show="tipoUser===2" ui-sref="horasList ({medicoId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
-                <img class="uk-border-circle"  src="http://i0.kym-cdn.com/entries/icons/medium/000/005/180/YaoMingMeme.jpg" ng-show="tipoUser===3" ><div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
+<!--BARRA SUPERIOR-->
+<div id="barra-sup">
+    <h1 class="uk-width-1-6@xl uk-width-1-5@l">ASANAR</h1>
+    <div class="imgm">
+        Usuario X &nbsp;&nbsp;
+        <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 1" ui-sref="usuarioDetail ({usuarioId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
+        <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 2" ui-sref="horasList ({medicoId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
+        <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 3" ><div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
 
-            </div>
-        </div>
+    </div>
+</div>
 
-        
 
-        <!--BARRA LATERAL-->
-        <div id="barra-lateral" class="uk-width-1-6@xl uk-width-1-5@l uk-card-default uk-card-body uk-box-shadow-large">
-            <ul class="list1">
-                    <a ng-show="tipoUser===1" ui-sref="usuarioDetail ({usuarioId: idUser})"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
-                   <a ng-show="tipoUser===2" ui-sref="horasList ({medicoId: idUser})"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
-                    <a ui-sref="hospitalesList"><span uk-icon="icon: location"></span>&nbsp;&nbsp;Hospitales</a>
-                    <a ui-sref="usuariosList" ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: users"></span>&nbsp;&nbsp;Usuarios</a>
-                    <a ui-sref="tarjetasList"  ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: credit-card"></span>&nbsp;&nbsp;Tarjetas</a>
-                    <a ui-sref="pagosList" ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: list"></span>&nbsp;&nbsp;Pagos</a>
-                    <a ui-sref="farmaciasList" ng-show="tipoUser!==2"><span uk-icon="icon: lifesaver"></span>&nbsp;&nbsp;Farmacias</a>
-                    <a ui-sref="medicamentosList"><span uk-icon="icon: grid"></span>&nbsp;&nbsp;Medicamentos</a>
-                    <a ui-sref="medicosList" ng-show="tipoUser!==2"><span uk-icon="icon: star"></span>&nbsp;&nbsp;Médicos</a>
-                    <a ui-sref="laboratoriosList"><span uk-icon="icon: search"></span>&nbsp;&nbsp;Laboratorios</a>
-                    <a ui-sref="examenesList" ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: nut"></span>&nbsp;&nbsp;Exámenes</a>
-                    <a ui-sref="citasList" ng-show="tipoUser!==1 && tipoUser!==2"><span uk-icon="icon: calendar"></span>&nbsp;&nbsp;Citas</a>
 
-                </ul>
-        </div>
+<!--BARRA LATERAL-->
+<div id="barra-lateral" class="uk-width-1-6@xl uk-width-1-5@l uk-card-default uk-card-body">
+    <ul class="list1">
+        <a ng-show="tipoUser === 1" ui-sref="usuarioDetail ({usuarioId: idUser})" class="elemento"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
+        <a ng-show="tipoUser === 2" ui-sref="horasList ({medicoId: idUser})" class="elemento"><span uk-icon="icon: home"></span>&nbsp;&nbsp;Página Principal</a>
+        <a ui-sref="hospitalesList" class="elemento"><span uk-icon="icon: location"></span>&nbsp;&nbsp;Hospitales</a>
+        <a ui-sref="usuariosList" ng-show="tipoUser !== 1 && tipoUser !== 2" class="elemento"><span uk-icon="icon: users"></span>&nbsp;&nbsp;Usuarios</a>
+        <a ui-sref="tarjetasList"  ng-show="tipoUser !== 1 && tipoUser !== 2" class="elemento"><span uk-icon="icon: credit-card"></span>&nbsp;&nbsp;Tarjetas</a>
+        <a ui-sref="pagosList" ng-show="tipoUser !== 1 && tipoUser !== 2" class="elemento"><span uk-icon="icon: list"></span>&nbsp;&nbsp;Pagos</a>
+        <a ui-sref="farmaciasList" ng-show="tipoUser !== 2" class="elemento"><span uk-icon="icon: lifesaver"></span>&nbsp;&nbsp;Farmacias</a>
+        <a ui-sref="medicamentosList" class="elemento"><span uk-icon="icon: grid" ></span>&nbsp;&nbsp;Medicamentos</a>
+        <a ui-sref="medicosList" ng-show="tipoUser !== 2" class="elemento"><span uk-icon="icon: star"></span>&nbsp;&nbsp;Médicos</a>
+        <a ui-sref="laboratoriosList" class="elemento"><span uk-icon="icon: search" ></span>&nbsp;&nbsp;Laboratorios</a>
+        <a ui-sref="examenesList" ng-show="tipoUser !== 1 && tipoUser !== 2" class="elemento"><span uk-icon="icon: nut"></span>&nbsp;&nbsp;Exámenes</a>
+        <a ui-sref="citasList" ng-show="tipoUser !== 1 && tipoUser !== 2" class="elemento"><span uk-icon="icon: calendar"></span>&nbsp;&nbsp;Citas</a>
 
-        <!--NAV-->
-        <ul class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l">
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-disabled"><a href="#">Disabled</a></li>
-            <li><span href="#">Active</span></li>
-        </ul>
-        
+    </ul>
+</div>
+
+<!--NAV-->
+<ul class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l">
+    <li><a href="#">Item</a></li>
+    <li><a href="#">Item</a></li>
+    <li class="uk-disabled"><a href="#">Disabled</a></li>
+    <li><span href="#">Active</span></li>
+</ul>
