Rediseño módulo Hospitales

--- a/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
@@ -17,9 +17,9 @@
         <input type="number" min="-76.6" max="-67.18" step="0.1" class="form-control uk-input" id="hospitalUbicacionLongitud" required ng-model="hospitalUbicacionLongitud" placeholder="e.g. 1.100">
     </div>
     <br><div class="uk-button-group">
-        <button type="reset" class="uk-button-secondary uk-button">Reiniciar</button>
-        <button class="uk-button uk-button-default" ui-sref="hospitalesList">Cancelar</button>
-        <button ng-show="hospital.$valid" type="submit" class="uk-button-secondary uk-button">Guardar</button>
+        <button type="submit" class="uk-button uk-button-primary" id="butGuardar">Guardar</button>
+        <button type="reset" class="uk-button uk-button-secondary" id="butReset">Reiniciar</button>
+        <button class="uk-button uk-button-primary" ui-sref="hospitalesList" id="butCancelar">Cancelar</button>
     </div>
        
     
