Rediseño módulos varios

--- a/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail_.html
+++ b/especialistas-web/src/main/webapp/src/modules/examenes/examen.detail_.html
@@ -5,20 +5,13 @@
     </div>
     <div class="col-md-9">
         <div class="row">
-            <font color="#355384">
-            <h3>NOMBRE</h3>
-            </font>
-            {{examenActual.nombre}}
-            <font color="#355384">
-            <h3>PRECIO</h3>
-            </font>
-            {{examenActual.precio}}
-            <font color="#355384">
-            <h3>RECOMENDACIONES</h3>
-            </font>
-            {{examenActual.recomendacion}}
+            <h3>NOMBRE: </h3>{{examenActual.nombre}}
+
+            <h3>PRECIO: </h3>{{examenActual.precio}}
+            
+            <h3>RECOMENDACIONES: </h3>{{examenActual.recomendacion}}
         </div>
         <br>
-            <button class="uk-button uk-button-default" ui-sref="examenesList" >Volver</button>
+            <button class="uk-button uk-button-default" ui-sref="examenesList" >VOLVER</button>
     </div>
 </div>
