--- a/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
@@ -26,8 +26,8 @@
                         </div> 
                         <br>
                         <div class="uk-button-group">
-                            <button class="uk-button uk-button-default" ui-sref="medicamentosList">Cancelar</button>
-                            <button ng-show="medicamento.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+                            <button ng-show="medicamento.$valid" type="submit" class="uk-button uk-button-secondary" id="butGuardar">Guardar</button>
+                            <button class="uk-button uk-button-default" ui-sref="medicamentosList" id="butCancelar">Cancelar</button>
                         </div>
                        </form>
 
