--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
@@ -21,8 +21,9 @@
     </div>
     <br>
     <div class="uk-button-group">
-        <button type="reset" class="uk-button uk-button-secondary">Reiniciar</button>
-        <button class="uk-button uk-button-default" ui-sref="farmaciasList">Cancelar</button>
-        <button ng-show="farmacia.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+        <button type="submit" class="uk-button uk-button-secondary" id="butGuardar">Guardar</button>
+        <button type="reset" class="uk-button uk-button-secondary" id="butReset">Reiniciar</button>
+        <button class="uk-button uk-button-default" ui-sref="farmaciasList" id="butCancelar">Cancelar</button>
+        
     </div>
 </form>
