--- a/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
@@ -12,9 +12,10 @@
     </div>
     <br>
     <div class="uk-button-group">
-        <button type="reset" class="uk-button uk-button-secondary">Reiniciar</button>
-        <button class="uk-button uk-button-default" ui-sref="medicosList">Cancelar</button>
-        <button ng-show="medico.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
+        <button ng-show="medico.$valid" type="submit" class="uk-button uk-button-secondary" id="butGuardar">Guardar</button>
+        <button type="reset" class="uk-button uk-button-secondary" id="butReset">Reiniciar</button>
+        <button class="uk-button uk-button-default" ui-sref="medicosList" id="butCancelar">Cancelar</button>
+        
     </div>
 
 </form>
