--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.detail.html
@@ -1,6 +1,4 @@
 <div class="col col-md-6">
-    <font color="#355384">
-    <h3>COMENTARIOS</h3>
-    </font>
-    {{currentCita.comentarios}}
+    <h3>COMENTARIOS: </h3>{{currentCita.comentarios}}
+    
 </div>
