--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
@@ -42,7 +42,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <br><a uk-icon="icon: plus" ui-sref="consultoriosCreate({hospitalId: currentHospital.id})"></a>
+                        <br><a uk-icon="icon: plus" style="color: #44b3ee" ui-sref="consultoriosCreate({hospitalId: currentHospital.id})"></a>
                     </td>
                 </tr>
             </tbody>
